use class directly